[package]
name = "winit_single"
version = "0.1.1"
edition = "2024"

[dependencies]
winit = "0.30"
pollster = "0.4"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = { version = "0.2.108", default-features = false }
wasm-bindgen-futures = { version = "0.4.58", default-features = false }
web-sys = { version = "0.3.85", default-features = false }
console_error_panic_hook = "0.1.5"
